// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should set the created flag 1`] = `
Object {
  "created": true,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 10,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has attendee info fields 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": true,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": true,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has duration error 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "hasDurationError": true,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the id 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 42,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": true,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is modal open 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": true,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is settings loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": true,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 10,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": true,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2018-07-19",
    "endDateInput": "July 19, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "endTimeInput": "7:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;
